DI | serialization - use boost

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 # Dependencies
 FIND_PACKAGE(Threads REQUIRED)
-FIND_PACKAGE(Boost REQUIRED)
+FIND_PACKAGE(Boost 1.75 REQUIRED serialization)
 FIND_PACKAGE(httplib REQUIRED)
 
 # Include directories and libraries
@@ -14,4 +14,4 @@ INCLUDE_DIRECTORIES(
 
 ADD_EXECUTABLE(proxy Proxy.cxx)
 
-TARGET_LINK_LIBRARIES(proxy Threads::Threads Boost::boost httplib::httplib)
+TARGET_LINK_LIBRARIES(proxy Threads::Threads Boost::boost Boost::serialization httplib::httplib)
