DI | return device specs

--- a/api/CMakeLists.txt
+++ b/api/CMakeLists.txt
@@ -1,3 +1,5 @@
+FIND_PACKAGE(RapidJSON)
 FIND_PACKAGE(httplib REQUIRED)
+
 include_directories(${PROJECT_SOURCE_DIR}/api/include ${PROJECT_SOURCE_DIR}/domain/include)
 add_library(api DataEndpoint.cxx DevicesEndpoint.cxx)
