DI | build & start analysis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,17 @@ cmake_minimum_required(VERSION 3.16)
 project(DIProxy)
 set(CMAKE_CXX_STANDARD 17)
 
+add_subdirectory(utils)
 add_subdirectory(api)
 add_subdirectory(domain)
 add_subdirectory(infrastructure)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/api/include ${CMAKE_CURRENT_SOURCE_DIR}/domain/include ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure/include)
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/api ${CMAKE_CURRENT_SOURCE_DIR}/domain ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/api/include ${CMAKE_CURRENT_SOURCE_DIR}/domain/include ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure/include ${CMAKE_CURRENT_SOURCE_DIR}/utils/include)
+link_directories(${CMAKE_CURRENT_SOURCE_DIR}/api ${CMAKE_CURRENT_SOURCE_DIR}/domain ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure ${CMAKE_CURRENT_SOURCE_DIR}/utils)
 
 # Dependencies
 FIND_PACKAGE(Threads REQUIRED)
 
 ADD_EXECUTABLE(proxy Proxy.cxx)
 
-TARGET_LINK_LIBRARIES(proxy Threads::Threads api domain infrastructure)
+TARGET_LINK_LIBRARIES(proxy Threads::Threads api domain infrastructure utils)
