mongoc: rebase to sync with master
Changes made to master before this commit affecting this version:
  * remove 'raw' field;
  * convert Message to JSON through toJson method;
  * add props of JSON as fields of Message.

Change infrastructure/CMakeLists.txt to provide toJson()
in infrastructure/InMemoryMessageRepository.cxx.
Add prototype of toJson() to DataEndpoint.h, as it serializes
incoming messages.
Workaround for fixme: 'count' header not given - printf stoi.
Keep MONGODB_SWITCH to switch between queue and DB implementation.
Revert prx_db in InMemoryMessageRepository.cxx and Proxy.cxx.
Resolve fixme: rule out two unread messages with same startTime
by secondary sorting by _id.

Make client global. Move DB init and conn/disconn to Proxy.cxx.
Turns out to be more efficient - OIDs between subsequent messages
differ by one; with local client and conn/disconn every message,
OIDs differ by two.
Fixme: add mongoc_cleanup in Proxy.cxx.
Fixme: add setting DB URI through CLI.

Because of presence of a bug in libmongoc, there is still no
possibility to parse a JSON containing a proper uint64 value.

In order to deal with this, upon adding a message:
  1) serialize the message
  2) remove the creationTimer field
  3) init BSON by remaining JSON
  4) append it through BSON_APPEND_DECIMAL128 macro
  5) generate the ObjectID (OID)
  6) append "read": false prop to document
  6) insert BSON into database.

On request to retrieve data:
  1) query database to send first count documents matching:
     - "read": false
     - sorted ascending by startTime
  2*)set fields in message by values extracted from BSON
  3) change the document to "read": true
  4) update document in database.

* setting 'payload' object:
  1) find and set bson_iter_t on the prop in BSON
  2) extract all binary content of subdocument by bson_iter_document()
  3) create new BSON by bson_new_from_data() on extracted data
  4) convert BSON to JSON through bson_as_relaxed_extended_json
  5) assign created stri

--- a/infrastructure/CMakeLists.txt
+++ b/infrastructure/CMakeLists.txt
@@ -2,6 +2,6 @@ find_package(mongocxx REQUIRED)
 find_package(bsoncxx REQUIRED)
 find_package(mongoc-1.0 1.7 REQUIRED)
 
-include_directories(${PROJECT_SOURCE_DIR}/infrastructure/include ${PROJECT_SOURCE_DIR}/domain/include /usr/local/include/libmongoc-1.0 /usr/local/include/libbson-1.0)
+include_directories(${PROJECT_SOURCE_DIR}/infrastructure/include ${PROJECT_SOURCE_DIR}/domain/include ${PROJECT_SOURCE_DIR}/api/include /usr/local/include/libmongoc-1.0 /usr/local/include/libbson-1.0)
 add_library(infrastructure InMemoryDevicesRepository.cpp InMemoryMessageRepository.cpp InMemoryAnalysisRepository.cpp InMemoryRunRepository.cpp)
-target_link_libraries(infrastructure mongo::mongocxx_shared mongo::bsoncxx_shared)
+target_link_libraries(infrastructure api mongo::mongocxx_shared mongo::bsoncxx_shared)
