DI | add volume for DB

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,9 @@ services:
   mongo:
     image: mongo
     restart: always
+    volumes:
+      - type: volume
+        target: /data/db
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
