DI | move ROOT & ARROW serialization to proxy

--- a/api/CMakeLists.txt
+++ b/api/CMakeLists.txt
@@ -1,5 +1,7 @@
-FIND_PACKAGE(RapidJSON)
-FIND_PACKAGE(httplib REQUIRED)
+find_package(RapidJSON)
+find_package(httplib REQUIRED)
+find_package(Arrow REQUIRED)
 
-include_directories(${PROJECT_SOURCE_DIR}/api/include ${PROJECT_SOURCE_DIR}/domain/include ${PROJECT_SOURCE_DIR}/utils/include)
+include_directories(${PROJECT_SOURCE_DIR}/api/include ${PROJECT_SOURCE_DIR}/domain/include ${PROJECT_SOURCE_DIR}/utils/include ${PROJECT_SOURCE_DIR}/serialization/include)
 add_library(api DataEndpoint.cxx DevicesEndpoint.cxx AnalysisEndpoint.cpp)
+target_link_libraries(api serialization Arrow::arrow_shared)
