--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(utils)
 add_subdirectory(api)
 add_subdirectory(domain)
 add_subdirectory(infrastructure)
+add_subdirectory(serialization)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/api/include ${CMAKE_CURRENT_SOURCE_DIR}/domain/include ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure/include ${CMAKE_CURRENT_SOURCE_DIR}/utils/include)
 link_directories(${CMAKE_CURRENT_SOURCE_DIR}/api ${CMAKE_CURRENT_SOURCE_DIR}/domain ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure ${CMAKE_CURRENT_SOURCE_DIR}/utils)
@@ -15,4 +16,4 @@ FIND_PACKAGE(Threads REQUIRED)
 
 ADD_EXECUTABLE(proxy Proxy.cxx)
 
-TARGET_LINK_LIBRARIES(proxy Threads::Threads api domain infrastructure utils)
+TARGET_LINK_LIBRARIES(proxy Threads::Threads api domain infrastructure utils serialization)
