--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,10 @@ add_subdirectory(domain)
 add_subdirectory(infrastructure)
 add_subdirectory(serialization)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/api/include ${CMAKE_CURRENT_SOURCE_DIR}/domain/include ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure/include ${CMAKE_CURRENT_SOURCE_DIR}/utils/include)
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/api ${CMAKE_CURRENT_SOURCE_DIR}/domain ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure ${CMAKE_CURRENT_SOURCE_DIR}/utils)
+find_package(RapidJSON)
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/api/include ${CMAKE_CURRENT_SOURCE_DIR}/domain/include ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure/include ${CMAKE_CURRENT_SOURCE_DIR}/utils/include ${CMAKE_CURRENT_SOURCE_DIR}/serialization/include)
+link_directories(${CMAKE_CURRENT_SOURCE_DIR}/api ${CMAKE_CURRENT_SOURCE_DIR}/domain ${CMAKE_CURRENT_SOURCE_DIR}/infrastructure ${CMAKE_CURRENT_SOURCE_DIR}/utils ${CMAKE_CURRENT_SOURCE_DIR}/serialization)
 
 # Dependencies
 FIND_PACKAGE(Threads REQUIRED)
