--- a/infrastructure/CMakeLists.txt
+++ b/infrastructure/CMakeLists.txt
@@ -1,6 +1,6 @@
-find_package(mongocxx REQUIRED)
-find_package(bsoncxx REQUIRED)
+find_package(mongoc-1.0 REQUIRED)
+find_package(bson-1.0 REQUIRED)
 
 include_directories(${PROJECT_SOURCE_DIR}/infrastructure/include ${PROJECT_SOURCE_DIR}/domain/include)
-add_library(infrastructure InMemoryDevicesRepository.cpp InMemoryMessageRepository.cpp InMemoryAnalysisRepository.cpp InMemoryRunRepository.cpp)
-target_link_libraries(infrastructure mongo::mongocxx_shared mongo::bsoncxx_shared)
+add_library(infrastructure MongoAnalysisRepository.cpp MongoMessageRepository.cpp InMemoryDevicesRepository.cpp InMemoryRunRepository.cpp)
+target_link_libraries(infrastructure mongo::mongoc_shared mongo::bson_shared)
