--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 WORK_DIR="/home/arczipt/alice/sw/"
 ALIBUILD_ARCH_PREFIX="ubuntu2004_x86-64/"
-O2_VERSION="O2/latest-DataInspector-o2/"
-
-ANALYSES_PATH="/home/arczipt/ANALYSES/"
 RUNS_PATH="/home/arczipt/RUNS/"
+O2PHYSICS_PATH="/home/arczipt/alice/O2Physics"
