DI | update build & execute scripts

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,5 +36,8 @@ services:
         read_only: true
       - type: volume
         target: /di/runs
+      - type: bind
+        source: /var/run/docker.sock
+        target: /var/run/docker.sock
     depends_on:
       - mongo
