DI | change script & fix

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-WORK_DIR="/home/arczipt/alice/sw/"
-ALIBUILD_ARCH_PREFIX="ubuntu2004_x86-64/"
-RUNS_PATH="/home/arczipt/RUNS/"
-O2PHYSICS_PATH="/home/arczipt/alice/O2Physics/"
-DI_DATASETS="/home/arczipt/alice/datasets/"
+WORK_DIR=/home/arczipt/alice/sw/;
+ALIBUILD_ARCH_PREFIX=ubuntu2004_x86-64/;
+RUNS_PATH=/home/arczipt/RUNS/;
+O2PHYSICS_PATH=/home/arczipt/alice/O2Physics/;
+MONGO_URL=mongodb://root:example@localhost:27017/;
+DI_DATASETS=/home/arczipt/alice/datasets/
